13.0.4
------
(RB=1051427)
Allow createDefaultTransportClientFactories to support https scheme as well

(RB=1051811)
Disabled few flaky tests.

(RB=1026759)
Fix testShutdownRequestOutstanding flaky test

13.0.3
------
(RB=1050311)
Temporarily remove the content type check for multiplexed requests.

13.0.2
------
(RB=1016157)
Update D2 LoadBalancerStrategyProperties PDSC file with new D2Event properties
(RB=1048885)
Fix pegasus test failure

13.0.1
------
(RB=924997)
Add D2Event support

13.0.0
------
(RB=1041067)
Bump open source to Gradle 3.5. Make most tasks cacheable.

12.0.3
------
(RB=1045362)
Fix NPE when client is using D2 and does not set R2Constants.OPERATION on request context.

12.0.2
------
(RB=1005059)
Logs a warning if maxResponseSize greater than max int is set to the HttpNettyChannelPoolFactory

(RB=1042879)
Reintroducing UnionDataSchema#getType() to ease the migration to UnionDataSchema#getTypeByMemberKey().

12.0.1
------
(RB=1034793)
Improves HTTP/2 error handling

12.0.0
------
(RB=978263)
Initial set of changes in the data schema layer to support aliasing Union members.

(RB=984126)
Changes in the data template and Java codegen layer for supporting Union members aliases.

(RB=985321)
Updating compatibility checks for Union member aliasing.

(RB=1015914)
Schema translator changes for translating Pegasus union with aliases to Avro records with optional fields.

(RB=1020864)
Data translator changes for supporting Pegasus union with aliases.

(RB=1022062)
Remove 'type' based methods in UnionDataSchema and cleanup pegasus codebase that uses those methods.

(RB=993931)
Support custom content-types/DataCodecs in Rest.Li. This change also adds customizable codec support for multiplexed requests.

(RB=1037063)
Removed the deprecated methods in ResourceMethodDescriptor (follow up from commit #a70de22).

(RB=1037141)
Killing the usage of getFinderMetadataType in ResourceModelEncoder.

11.1.1
-------
(RB=1031514)