@@ -21,7 +21,10 @@
 package test.r2.integ;
 
 import com.linkedin.common.callback.FutureCallback;
+import com.linkedin.r2.RemoteInvocationException;
 import com.linkedin.r2.filter.FilterChain;
+import com.linkedin.r2.filter.R2Constants;
+import com.linkedin.r2.message.RequestContext;
 import com.linkedin.r2.sample.Bootstrap;
 import com.linkedin.r2.sample.echo.EchoService;
 import com.linkedin.r2.sample.echo.rest.RestEchoClient;
@@ -30,18 +33,22 @@ import com.linkedin.r2.transport.common.Server;
 import com.linkedin.r2.transport.common.bridge.client.TransportClient;
 import com.linkedin.r2.transport.common.bridge.client.TransportClientAdapter;
 import com.linkedin.r2.transport.http.client.HttpClientFactory;
+import com.linkedin.r2.transport.http.client.common.UnknownServerCertPrincipalNameException;
+import com.linkedin.test.util.ExceptionTestUtil;
+import org.testng.Assert;
+import org.testng.annotations.DataProvider;
+import org.testng.annotations.Factory;
+import org.testng.annotations.Test;
+
+import javax.net.ssl.KeyManagerFactory;
+import javax.net.ssl.SSLContext;
+import javax.net.ssl.TrustManagerFactory;
 import java.io.FileInputStream;
 import java.net.URI;
 import java.security.KeyStore;
 import java.util.HashMap;
 import java.util.Map;
-import javax.net.ssl.KeyManagerFactory;
-import javax.net.ssl.SSLContext;
-import javax.net.ssl.TrustManagerFactory;
-import org.testng.Assert;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Factory;
-import org.testng.annotations.Test;
+import java.util.concurrent.TimeUnit;
 
 
 /**
@@ -80,7 +87,7 @@ public class TestHttpsEcho extends AbstractEchoServiceTest
 
 
   @Override
-  protected EchoService getEchoClient(Client client, URI uri)
+  protected RestEchoClient getEchoClient(Client client, URI uri)
   {
     return new RestEchoClient(Bootstrap.createHttpsURI(_port, uri), client);
   }
@@ -135,6 +142,50 @@ public class TestHttpsEcho extends AbstractEchoServiceTest
     client.echo(msg, callback);
 
     Assert.assertEquals(callback.get(), msg);
+  }
+
+  @Test
+  public void testHttpsEchoWithWrongCertPrincipal() throws Exception
+  {
+    try
+    {
+      testHttpsEchoWithCertPrincipal("WRONG CERTIFICATE NAME");
+    }
+    catch (Exception e)
+    {
+      ExceptionTestUtil.verifyCauseChain(e, RemoteInvocationException.class, UnknownServerCertPrincipalNameException.class);
+      return;
+    }
+    Assert.fail();
+  }
+
+  @Test
+  public void testHttpsEchoWithCorrectCertPrincipal() throws Exception
+  {
+    testHttpsEchoWithCertPrincipal("CN=com.linkedin.r2,OU=r2-int-test,O=LinkedIn,L=Unknown,ST=Unknown,C=Unknown");
+  }
+
+  /**
+   * If the user doesn't specify a principal cert name, anything is allowed and the requests should simply succeed
+   */
+  @Test
+  public void testHttpsEchoWithNoCertPrincipal() throws Exception
+  {
+    testHttpsEchoWithCertPrincipal(null);
+  }
+
+  public void testHttpsEchoWithCertPrincipal(String principalName) throws Exception
+  {
+    final RestEchoClient client = getEchoClient(_client, Bootstrap.getEchoURI());
+
+    final String msg = "This is a simple echo message";
+    final FutureCallback<String> callback = new FutureCallback<>();
+    RequestContext requestContext = new RequestContext();
+    requestContext.putLocalAttr(R2Constants.EXPECTED_CERT_PRINCIPAL_NAME, principalName);
+    client.echo(msg, requestContext, callback);
+
+    String actual = callback.get(2, TimeUnit.SECONDS);
+    Assert.assertEquals(actual, msg);
   }
 
 }
