@@ -17,4 +17,6 @@ dependencies {
   testCompile externalDependency.jettyUtil
   testCompile externalDependency.servletApi
   testCompile externalDependency.testng
+  testCompile project (':test-util')
+
 }
