@@ -34,6 +34,7 @@ import com.linkedin.r2.transport.http.client.TimeoutTransportCallback;
 import com.linkedin.r2.transport.http.client.common.AbstractNettyClient;
 import com.linkedin.r2.transport.http.client.common.ChannelPoolFactory;
 import com.linkedin.r2.transport.http.client.common.ChannelPoolManager;
+import com.linkedin.r2.transport.http.client.common.SslRequestHandler;
 import com.linkedin.r2.transport.http.common.HttpProtocolVersion;
 import com.linkedin.r2.util.Cancellable;
 import com.linkedin.r2.util.TimeoutRunnable;
@@ -199,6 +200,10 @@ public class HttpNettyClient extends AbstractNettyClient<RestRequest, RestRespon
 
         // This handler invokes the callback with the response once it arrives.
         channel.attr(RAPResponseHandler.CALLBACK_ATTR_KEY).set(callback);
+
+        // Set the expected value by the user of the cert principal name
+        String expectedCertPrincipal = (String) requestContext.getLocalAttr(R2Constants.EXPECTED_CERT_PRINCIPAL_NAME);
+        channel.attr(SslRequestHandler.EXPECTED_CERT_PRINCIPAL_ATTR_KEY).set(expectedCertPrincipal);
 
         final State state = _state.get();
         if (state == State.REQUESTS_STOPPING || state == State.SHUTDOWN)
